# VisoWBS

./: .gitignore  CMakeLists.txt  PROJECT_STRUCTURE.md  README.md  example.csv  requirements.txt  setup.py  wbsviz_gui.py
docs/: README_LEGACY.md
include/wbsviz/: Common.hpp  DotBuilder.hpp  Model.hpp
legacy/include/wbsviz/: CsvReader.hpp  DotBuilder.hpp  Model.hpp  Renderer.hpp  TreeBuilder.hpp
legacy/src/: Renderer.cpp  TreeBuilder.cpp
src/: CsvReader.cpp  DotBuilder.cpp  TreeBuilder.cpp  main.cpp
tests/: __init__.py  test_basic.py
wbsviz/: __init__.py
wbsviz/core/: __init__.py  common.py  csv_reader.py  dot_builder.py  model.py  tree_builder.py
wbsviz/gui/: __init__.py  main.py
